--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ package-mode = false
 python = "^3.10"
 django = "^5.0.7"
 psycopg2-binary = "^2.9.9"
+dj-database-url = "^2.2.0"
+python-dotenv = "^1.0.1"
+gunicorn = "^22.0.0"
+uvicorn = "^0.30.5"
 
 
 [build-system]
