--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Task manager website"
 authors = ["Pavel Krivosheev <pkrivosheev@bk.ru>"]
 readme = "README.md"
-package-mode = false
+packages = [
+    { include = "task_manager" },
+    { include = "main_app" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
