--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dj-database-url = "^2.2.0"
 python-dotenv = "^1.0.1"
 gunicorn = "^22.0.0"
 uvicorn = "^0.30.5"
+django-bootstrap5 = "^24.2"
 
 
 [build-system]
