--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.1"
 gunicorn = "^22.0.0"
 uvicorn = "^0.30.5"
 django-bootstrap5 = "^24.2"
+flake8 = "^7.1.0"
 
 
 [build-system]
