--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ jobs:
           uses: actions/setup-python@v3
           with:
             python-version: "3.10"
+
+        - name: Install Poetry
+          run: pip install poetry
         
         - name: Install dependencies and apply migrations
           run: make install
