--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ whitenoise = "^6.7.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.0"
+django-debug-toolbar = "^4.4.6"
 
 [build-system]
 requires = ["poetry-core"]
