--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,9 @@ jobs:
 
         - name: Run linter
           run: make lint
+
+        - name: Run tests
+          env:
+            DATABASE_URL: ${{ vars.DATABASE_URL }}
+            SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          run: make test
