--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 
         - name: Install Poetry
           run: pip install poetry
-        
+
         - name: Install dependencies and apply migrations
           run: make install
 
@@ -26,3 +26,13 @@ jobs:
             DATABASE_URL: ${{ vars.DATABASE_URL }}
             SECRET_KEY: ${{ secrets.SECRET_KEY }}
           run: make test
+
+        - name: Notify deploy to Rollbar
+          uses: rollbar/github-deploy-action@2.1.1
+          id: rollbar_deploy
+          with:
+            environment: 'production'
+            version: ${{ github.sha }}
+          env:
+            ROLLBAR_ACCESS_TOKEN: ${{ secrets.ROLLBAR_ACCESS_TOKEN }}
+            ROLLBAR_USERNAME: ${{ github.actor }}
