--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,6 @@ jobs:
           with:
             environment: 'production'
             version: ${{ github.sha }}
+            local_username: ${{ github.actor }}
           env:
             ROLLBAR_ACCESS_TOKEN: ${{ secrets.ROLLBAR_ACCESS_TOKEN }}
-            ROLLBAR_USERNAME: ${{ github.actor }}
