--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,7 @@ jobs:
           uses: paambaati/codeclimate-action@v9.0.0
           env:
             CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+            DATABASE_URL: ${{ vars.DATABASE_URL }}
+            SECRET_KEY: ${{ secrets.SECRET_KEY }}
           with:
             coverageCommand: make test-cov
