--- a/tasks/fixtures/tasks.json
+++ b/tasks/fixtures/tasks.json
@@ -5,7 +5,7 @@
         "fields": {
             "name": "Test task 1",
             "description": "Test description",
-            "performer": null,
+            "executor": null,
             "status": 1,
             "author": 2,
             "created_at": "2024-08-21T11:36:32.491Z",
@@ -18,7 +18,7 @@
         "fields": {
             "name": "Test task 2",
             "description": "Test description",
-            "performer": 3,
+            "executor": 3,
             "status": 1,
             "author": 2,
             "created_at": "2024-08-21T11:37:07.916Z",
@@ -31,7 +31,7 @@
         "fields": {
             "name": "Test task 3",
             "description": "Test description",
-            "performer": 4,
+            "executor": 4,
             "status": 2,
             "author": 3,
             "created_at": "2024-08-21T11:37:37.344Z",
