--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ django-filter = "^24.3"
 coverage = "^7.6.1"
 django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.4.6"
+rollbar = "0.16.3"
 
 
 [tool.poetry.group.dev.dependencies]
